[project]
name = "mkdocs-site"
version = "0.1.0"
description = "Obsidian vault published as MkDocs site"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material[imaging]>=9.6.15",
    "mkdocs-obsidian-bridge>=1.2.0",
    "mike>=2.1.3",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "pytest>=8.0.0",
    "pytest-html>=4.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]
